added style, script and gulp tasks for the admin

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
-html
+htmlremo
   head
-    title YOUR_APP
+    title raphaelp | #{title}
     link(rel='stylesheet', href='/stylesheets/base.css')
   body
     block content
