some admin style

--- a/source/admin/sass/base.sass
+++ b/source/admin/sass/base.sass
@@ -11,3 +11,108 @@
 //----------------------------------------------------------------------------------------------------
 // YOUR AMAZING STYLE
 //----------------------------------------------------------------------------------------------------
+
+// Temporary style because of a problem with my path
+// which makes it impossible to import with gulp-sass.
+// https://github.com/dlmanning/gulp-sass/issues/322
+
+//----------------------------------------------------------------------------------------------------
+// _reset.sass
+//----------------------------------------------------------------------------------------------------
+
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain) */
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video
+	margin: 0
+	padding: 0
+	border: 0
+	font-size: 100%
+	font: inherit
+	vertical-align: baseline
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section
+	display: block
+
+body
+	line-height: 1
+
+ol, ul
+	list-style: none
+
+blockquote, q
+	quotes: none
+
+blockquote:before, blockquote:after,
+q:before, q:after
+	content: ''
+	content: none
+
+table
+	border-collapse: collapse
+	border-spacing: 0 
+
+//----------------------------------------------------------------------------------------------------
+// _general.sass
+//----------------------------------------------------------------------------------------------------
+
+body
+	width: 1000px
+	display: block
+	margin: 0 auto
+	background-color: #eee
+	color: #333
+	font-family: 'Open Sans', helvetica, arial, sans-serif 
+
+.container
+	padding-left: 215px
+	padding-top: 15px
+
+	section
+		background-color: #fff
+		border-radius: 3px
+		padding: 10px 20px
+		margin-bottom: 15px
+
+//----------------------------------------------------------------------------------------------------
+// _sidenav.sass
+//----------------------------------------------------------------------------------------------------
+
+.side-nav
+	position: fixed
+	top: 15px
+	width: 200px
+	height: 100vh
+	font-size: 14px
+
+	ul
+		background-color: #2d2b32
+		border-radius: 3px
+
+	li
+		border-bottom: 1px solid #767676
+			
+		&:last-child
+			border-bottom: none
+
+	a
+		display: block
+		padding: 10px
+		color: #767676
+		text-decoration: none
+
