--- a/views/layout_admin.jade
+++ b/views/layout_admin.jade
@@ -1,11 +1,12 @@
 doctype html
-htmlremo
+html
   head
     title raphaelp | #{title}
-    link(rel='stylesheet', href='/stylesheets/admin/base.css')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800,700italic,600italic,400italic')
+    link(rel='stylesheet', href='/admin/stylesheets/themify-icons.css')
+    link(rel='stylesheet', href='/admin/stylesheets/base.css')
   body
+    include admin/_sidenav
     block content
 
-    script(src='/javascripts/main_admin.js')
-
-
+    script(src='/admin/javascripts/main.js')
