separated styles + more styles

--- a/views/admin/_sidenav.jade
+++ b/views/admin/_sidenav.jade
@@ -1,7 +1,20 @@
 
 nav.side-nav
-	ul
-		li
-			a(href="/admin/projects") Projects
-		li
-			a(href="/admin/contact") Contact
+  ul
+    li
+      a(href="/admin/logout")
+        i.ti-user
+        | Logout
+  ul
+    li
+      a(href="/admin/home")
+        i.ti-home
+        | Home
+    li
+      a(href="/admin/projects")
+        i.ti-layout-media-overlay-alt-2
+        | Projects
+    li
+      a(href="/admin/contact")
+        i.ti-mobile
+        | Contact
