--- a/public/admin/stylesheets/base.css
+++ b/public/admin/stylesheets/base.css
@@ -72,6 +72,36 @@ body {
   margin-bottom: 15px;
 }
 
+.container section:first-child {
+  min-height: 300px;
+}
+
+h1, h2, h3, h4, h5 {
+  padding-bottom: 10px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+h1 {
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 18px;
+}
+
+h4 {
+  font-size: 14px;
+}
+
+i {
+  margin-right: 10px;
+}
+
 .side-nav {
   position: fixed;
   top: 15px;
@@ -81,21 +111,36 @@ body {
 }
 
 .side-nav ul {
-  background-color: #2d2b32;
-  border-radius: 3px;
+  margin-bottom: 10px;
 }
 
 .side-nav li {
   border-bottom: 1px solid #767676;
 }
 
+.side-nav li:first-child a {
+  border-radius: 3px 3px 0 0;
+}
+
 .side-nav li:last-child {
   border-bottom: none;
 }
 
+.side-nav li:last-child a {
+  border-radius: 0 0 3px 3px;
+}
+
 .side-nav a {
   display: block;
-  padding: 10px;
+  padding: 15px 10px;
   color: #767676;
+  background-color: #2d2b32;
   text-decoration: none;
+  -webkit-transition: all 0.2s ease-in;
+          transition: all 0.2s ease-in;
+}
+
+.side-nav a:hover {
+  background-color: #28262c;
+  color: #fafafa;
 }
