--- a/source/admin/sass/base.sass
+++ b/source/admin/sass/base.sass
@@ -11,8 +11,12 @@
 //----------------------------------------------------------------------------------------------------
 // YOUR AMAZING STYLE
 //----------------------------------------------------------------------------------------------------
+@import "grid"
 @import "general"
+@import "component"
 
 @import "partials/sidenav"
 
 @import "pages/home"
+@import "pages/projects"
+@import "pages/contact"
