--- a/source/admin/sass/partials/_sidenav.sass
+++ b/source/admin/sass/partials/_sidenav.sass
@@ -15,8 +15,7 @@
 	li
 		border-bottom: 1px solid #767676
 
-		&:first-child
-			a
+		&:first-child a
 				border-radius: 3px 3px 0 0
 
 		&:last-child
@@ -24,6 +23,9 @@
 
 			a
 				border-radius:  0 0 3px 3px
+
+		&.alone a
+			border-radius: 3px
 
 	a
 		display: block
@@ -36,3 +38,6 @@
 		&:hover
 			background-color: #28262c
 			color: #fafafa
+
+	i
+		margin-right: 10px
