--- a/views/admin/_sidenav.jade
+++ b/views/admin/_sidenav.jade
@@ -5,6 +5,10 @@ nav.side-nav
       a(href="/admin/logout")
         i.ti-user
         | Logout
+    li
+      a(href="/")
+        i.ti-desktop
+        | Go to site
   ul
     li
       a(href="/admin/home")
