--- a/source/admin/sass/_general.sass
+++ b/source/admin/sass/_general.sass
@@ -6,26 +6,37 @@ body
 	width: 1000px
 	display: block
 	margin: 0 auto
-	background-color: #eee
-	color: #333
+	color: $dark-text
 	font-family: 'Open Sans', helvetica, arial, sans-serif
+	letter-spacing: 1.5px
+	font-size: 16px
+	background-color: $bg-light
 
 .container
 	padding-left: 215px
 	padding-top: 15px
 
-	section
-		background-color: #fff
-		border-radius: 3px
+section.block
+	margin-bottom: 15px
+
+	&:first-child
+		min-height: 300px
+
+	header
+		border-radius: 3px 3px 0 0
+		background-color: #f6f6f6
 		padding: 10px 20px
-		margin-bottom: 15px
 
-		&:first-child
-			min-height: 300px
+		i
+			margin-right: 10px
 
+	article
+		background-color: #fff
+		border-radius: 0 0 3px 3px
+		padding: 15px 20px
+		+clear-float
 
 h1, h2, h3, h4, h5
-	padding-bottom: 10px
 	font-weight: bold
 	text-transform: uppercase
 
@@ -41,5 +52,7 @@ h3
 h4
 	font-size: 14px
 
-i
-	margin-right: 10px
+a
+	color: $dark-text
+	text-decoration: none
+	font-size: 11px
