--- a/source/admin/sass/_general.sass
+++ b/source/admin/sass/_general.sass
@@ -8,8 +8,8 @@ body
 	margin: 0 auto
 	color: $dark-text
 	font-family: 'Open Sans', helvetica, arial, sans-serif
-	letter-spacing: 1.5px
-	font-size: 16px
+	letter-spacing: 1.2px
+	font-size: 14px
 	background-color: $bg-light
 
 .container
@@ -24,7 +24,7 @@ section.block
 
 	header
 		border-radius: 3px 3px 0 0
-		background-color: #f6f6f6
+		background-color: darken($bg-light, 3%)
 		padding: 10px 20px
 
 		i
