--- a/source/admin/sass/pages/_home.sass
+++ b/source/admin/sass/pages/_home.sass
@@ -2,4 +2,7 @@
 // _home.sass
 //----------------------------------------------------------------------------------------------------
 
-
+.home
+	h2
+		text-align: center
+		padding: 25px 150px
