connection to db, insert and get projects from db

--- a/source/admin/sass/_component.sass
+++ b/source/admin/sass/_component.sass
@@ -38,4 +38,21 @@ form
 			width: 150px
 
 		input[type="text"], textarea
-			width: 70%
+			width: 98%
+
+	.froala-editor
+		width: 95%
+		border-top-width: 1px
+		border-color: darken($bg-light, 20%)
+		border-top-left-radius: 3px
+		border-top-right-radius: 3px
+
+	.froala-wrapper.f-basic
+		border-color: darken($bg-light, 20%)
+		border-bottom-left-radius: 3px
+		border-bottom-right-radius: 3px
+
+		.froala-element
+			min-height: 150px
+			font-size: 12px
+			letter-spacing: 0
