--- a/source/admin/sass/base.sass
+++ b/source/admin/sass/base.sass
@@ -2,6 +2,9 @@
 // VENDORS
 //----------------------------------------------------------------------------------------------------
 @import "vendors/reset"
+@import "vendors/froala_content"
+@import "vendors/froala_editor"
+@import "vendors/froala_style"
 
 //----------------------------------------------------------------------------------------------------
 // VARIABLES, MIXINS, ETC.
