--- a/views/layout_admin.jade
+++ b/views/layout_admin.jade
@@ -2,8 +2,10 @@ doctype html
 html
   head
     title raphaelp | #{title.toLowerCase()}
+    //<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800,700italic,600italic,400italic')
     link(rel='stylesheet', href='/admin/stylesheets/themify-icons.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='/admin/stylesheets/base.css')
   body(class="#{ title.toLowerCase() }")
     include admin/_sidenav
@@ -16,4 +18,5 @@ html
             | #{ title }
         block content
 
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js')
     script(src='/admin/javascripts/main.js')
