--- a/source/admin/sass/pages/_home.scss
+++ b/source/admin/sass/pages/_home.scss
@@ -1,8 +1,12 @@
 //----------------------------------------------------------------------------------------------------
-// _home.sass
+// _home.scss
 //----------------------------------------------------------------------------------------------------
 
 .home
+{
 	h2
-		text-align: center
-		padding: 25px 150px
+	{
+		text-align: center;
+		padding: 25px 150px;
+	}
+}
